--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install -r requirements.txt
+  - pip install ./
 jobs:
   include:
     - stage: check
       script: ./runcheck
     - stage: test
-      script: source ./setenv && ./runtests
+      script: ./runtests
 after_success:
   - codecov
