--- a/configs/config_modules.json
+++ b/configs/config_modules.json
@@ -1,4 +1,3 @@
 {
-    "url": "https://github.com/cea-hpc/modules/releases/download/v{version}/modules-{version}.tar.gz",
-    "extension": "tar.gz"
+    "url": "https://github.com/cea-hpc/modules/releases/download/v{version}/modules-{version}.tar.gz"
 }
