--- a/configs/config_pycharm-community.json
+++ b/configs/config_pycharm-community.json
@@ -1,4 +1,3 @@
 {
-    "url": "https://download.jetbrains.com/python/pycharm-community-{version}.tar.gz",
-    "extension": "tar.gz"
+    "url": "https://download.jetbrains.com/python/pycharm-community-{version}.tar.gz"
 }
