--- a/configs/config_vscode.json
+++ b/configs/config_vscode.json
@@ -1,4 +1,3 @@
 {
-    "url": "https://vscode-update.azurewebsites.net/{version}/linux-x64/stable",
-    "extension": "tar.gz"
+    "url": "https://vscode-update.azurewebsites.net/{version}/linux-x64/stable"
 }
