--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 language: python
-python:
-  - "2.7"
-  - "3.6"
+
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.6
+
 install:
   - pip install -r requirements.txt
   - pip install ./
+
 jobs:
   include:
     - stage: check
       script: ./runcheck
     - stage: test
       script: ./runtests
+
 after_success:
   - codecov
