--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: python
 
-matrix:
-  include:
-    - python: 2.7
-    - python: 3.6
+python:
+  - "2.7"
+  - "3.6"
 
 install:
   - pip install -r requirements.txt
   - pip install ./
+
+script: pytest
 
 jobs:
   include:
