--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,18 @@
 language: python
-
 python:
   - "2.7"
   - "3.6"
-
+stages:
+  - check
+  - test
 install:
   - pip install -r requirements.txt
   - pip install ./
-
-script: pytest
-
 jobs:
   include:
     - stage: check
       script: ./runcheck
     - stage: test
       script: ./runtests
-
 after_success:
   - codecov
