--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-# directories
-.vscode
-.pytest_cache
-__pycache__
-
 # files
 *.pyc
-.coverage
+
+# directories
+.vscode/
+__pycache__/
+build/
+dist/
+*.egg-info/
