--- a/.github/workflows/packagerbuddy.yaml
+++ b/.github/workflows/packagerbuddy.yaml
@@ -11,8 +11,7 @@ jobs:
         python-version: 3.7
     - name: Install
       run: |
-        pip install -r requirements.txt
-        pip install ./
+        pip install -e .[dev]
     - name: Lint
       run: |
         ./runcheck
