--- a/.github/workflows/packagerbuddy.yaml
+++ b/.github/workflows/packagerbuddy.yaml
@@ -8,7 +8,7 @@ jobs:
     - name: Set up Python 3.6
       uses: actions/setup-python@v1
       with:
-        python-version: 3.6
+        python-version: [2.7, 3.6]
     - name: Install
       run: |
         pip install -e .[dev]
