--- a/.github/workflows/packagerbuddy.yaml
+++ b/.github/workflows/packagerbuddy.yaml
@@ -1,14 +1,18 @@
 name: Build
 on: [push]
 jobs:
-  packagerbuddy:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [2.7, 3.6]
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.6
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: [2.7, 3.6]
+        python-version: ${{ matrix.python-version }}
+
     - name: Install
       run: |
         pip install -e .[dev]
